--- a/Aarppo/app/src/main/res/layout/fragment_contact_us.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_contact_us.xml
@@ -22,52 +22,38 @@
         android:src="@drawable/arpo"
         android:gravity="center"
         android:id="@+id/imglog"
-        android:layout_below="@+id/relativeLayout2"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/adView4"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/arpofacebook" />
 
     <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Mail : arpoappsolutions@gmail.com"
+      android:text="arpoappsolutions@gmail.com"
         android:textSize="15dp"
-        android:layout_marginBottom="38dp"
-        android:layout_above="@+id/textView5"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView22" />
+        android:id="@+id/arpoEmail"
+        android:layout_marginBottom="15dp"
+        android:layout_above="@+id/twitterarpo"
+        android:layout_alignParentEnd="true" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Twitter : @arpoapps"
         android:textSize="15dp"
-        android:id="@+id/textView5"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/twitterarpo"
+        android:layout_marginBottom="13dp"
+        android:layout_above="@+id/arpofacebook"
+        android:layout_alignParentEnd="true" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Facebook : facebook.com/arpoapps"
         android:textSize="15dp"
-        android:layout_marginTop="39dp"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Music Credits"
-        android:textSize="20dp"
-        android:layout_marginTop="43dp"
-        android:id="@+id/textView7"
-        android:layout_below="@+id/textView6"
-        android:layout_centerHorizontal="true" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Arun and Rahul "
-        android:gravity="center"
-        android:textSize="15dp"
-        android:layout_below="@+id/textView7"
-        android:layout_alignStart="@+id/textView7" />
+        android:id="@+id/arpofacebook"
+        android:layout_above="@+id/adView4"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="15dp" />
+
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView4"
         android:layout_width="wrap_content"
@@ -77,5 +63,72 @@
         android:layout_gravity="left|bottom"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imgArpo"
+        android:src="@drawable/logoicon"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/manjappadafbgroup" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="www.manjappada.in"
+        android:id="@+id/manjappadaweb"
+        android:autoLink="web"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/manjappadatwitter"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="www.facebook.com/groups/Manjappada"
+        android:autoLink="web"
+        android:id="@+id/manjappadafbgroup"
+        android:layout_below="@+id/manjappadafbPage"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" www.twitter.com/kbfc_fans"
+        android:id="@+id/manjappadatwitter"
+        android:autoLink="web"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/manjappadainstagram"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="www.instagram.com/manjappada_kbfc"
+        android:autoLink="web"
+        android:id="@+id/manjappadainstagram"
+        android:layout_marginTop="13dp"
+        android:layout_below="@+id/manjappadautube"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autoLink="web"
+        android:text="www.youtube.com/ManjappadaKeralaBlastersFans"
+        android:id="@+id/manjappadautube"
+        android:layout_below="@+id/relativeLayout2"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="www.facebook.com/KeralaBlastersFC.fans"
+        android:autoLink="web"
+        android:id="@+id/manjappadafbPage"
+        android:layout_below="@+id/manjappadaweb"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp" />
 
 </RelativeLayout>
