--- a/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
+++ b/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
@@ -33,7 +33,7 @@
             <item
                 android:id="@+id/nav_contact"
                 android:icon="@drawable/ic_business"
-                android:title="Developers" />
+                android:title="Contact us" />
 
         </menu>
     </item>
