--- a/Aarppo/app/src/main/res/layout/fragment_settings_page.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_settings_page.xml
@@ -20,7 +20,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="പിടപിടക്കണ നെഞ്ചിലെ തകിലടിക്കണ താളമായ് കളി മൂക്കണൊരീ നേരത്ത് ഇടിമുഴക്കണ ബാന്റുമായ് ചുവടു വെക്കണ കൂട്ടര് വന്നെത്തണ് മൈതാനത്ത്"
+            android:text="പിടപിടക്കണ നെഞ്ചിലെ തകിലടിക്കണ താളമായ് കളി മൂക്കണൊരീ നേരത്ത് ,
+
+ഇടിമുഴക്കണ ബാന്റുമായ് ചുവടു വെക്കണ കൂട്ടര് വന്നെത്തണ് മൈതാനത്ത്"
             android:id="@+id/textView2"
             android:layout_below="@+id/textView3"
             android:layout_alignParentStart="true"
@@ -29,7 +31,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="വെടിപൊട്ടാസുണ്ടോ കണ്ണാ മുട്ടിതോൽക്കാൻ നിക്കേണ്ടാ നീ കുതിച്ചോടും കാറ്റിൽ പാറാൻ തിമിർത്താടും പൂരങ്ങളിൽ കെട്ടാമിനി മഞ്ഞക്കൊടീ"
+            android:text="വെടിപൊട്ടാസുണ്ടോ കണ്ണാ,
+മുട്ടിതോൽക്കാൻ നിക്കേണ്ടാ നീ,
+കുതിച്ചോടും കാറ്റിൽ പാറാൻ തിമിർത്താടും പൂരങ്ങളിൽ കെട്ടാമിനി മഞ്ഞക്കൊടീ"
             android:id="@+id/textView10"
             android:layout_marginTop="19dp"
             android:layout_below="@+id/textView2"
