--- a/MyChallenge/app/src/main/res/layout/fragment_challenge_page_client.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_challenge_page_client.xml
@@ -10,4 +10,19 @@
         android:layout_height="match_parent"
         android:text="Challenge page client"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Client message"
+        android:id="@+id/txt_msg"
+        android:layout_gravity="center"
+        android:textSize="30sp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Connect Client"
+        android:id="@+id/btn_connectTo"
+        android:layout_gravity="center" />
+
 </FrameLayout>
