--- a/MyChallenge/app/src/main/res/layout/fragment_challenge_page_server.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_challenge_page_server.xml
@@ -10,4 +10,11 @@
         android:layout_height="match_parent"
         android:text="Challenge Page server" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="START SERVER"
+        android:id="@+id/btn_connect_client"
+        android:layout_gravity="center" />
+
 </FrameLayout>
