--- a/MyChallenge/app/src/main/res/layout/fragment_challenge_page_server.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_challenge_page_server.xml
@@ -13,8 +13,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="START SERVER"
+        android:text="SEND MESSAGE"
         android:id="@+id/btn_connect_client"
-        android:layout_gravity="center" />
+        android:layout_gravity="left|bottom" />
 
 </FrameLayout>
