--- a/MyChallenge/app/src/main/res/layout/fragment_challenge_page_client.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_challenge_page_client.xml
@@ -23,6 +23,6 @@
         android:layout_height="wrap_content"
         android:text="Connect Client"
         android:id="@+id/btn_connectTo"
-        android:layout_gravity="center" />
+        android:layout_gravity="right|bottom" />
 
 </FrameLayout>
