--- a/MyChallenge/app/src/main/res/layout/fragment_challenge_page_client.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_challenge_page_client.xml
@@ -5,18 +5,6 @@
     tools:context="com.arpo.mychallenge.ChallengePageClient">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Challenge page client"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Client message"
-        android:id="@+id/txt_msg"
-        android:layout_gravity="center"
-        android:textSize="30sp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -24,5 +12,28 @@
         android:text="Connect Client"
         android:id="@+id/btn_connectTo"
         android:layout_gravity="right|bottom" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <GridView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:id="@+id/gv_client"
+            android:layout_centerHorizontal="true"
+            android:numColumns="2"/>
+    </RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Client message"
+        android:id="@+id/txt_msg"
+        android:layout_gravity="left|top"
+        android:textSize="20dp" />
 
 </FrameLayout>
