--- a/MyChallenge/app/src/main/res/layout/activity_create_challenge_pop_up.xml
+++ b/MyChallenge/app/src/main/res/layout/activity_create_challenge_pop_up.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="500dp"
+    android:layout_width="300dp"
     android:layout_height="500dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -60,10 +60,93 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set time Limit"
-        android:id="@+id/textView11"
+        android:text="Select Time"
+        android:id="@+id/txt_selectText"
         android:layout_below="@+id/chk_push_up"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="13dp" />
+
+    <EditText
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/edit_challengeNAME"
+        android:singleLine="true"
+        android:layout_alignBaseline="@+id/textView9"
+        android:layout_alignBottom="@+id/textView9"
+        android:layout_toRightOf="@+id/chk_push_up"
+        android:layout_toEndOf="@+id/chk_push_up"
+        android:linksClickable="true"
+        android:selectAllOnFocus="true"
+        android:textColor="#000000"
+        android:background="#ffffff" />
+
+    <CheckBox
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="30 seconds"
+        android:id="@+id/chk_selection1"
+        android:layout_below="@+id/txt_selectText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp"
+        android:checked="true" />
+
+    <CheckBox
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="1 minute"
+        android:id="@+id/chk_selection2"
+        android:checked="false"
+        android:layout_alignTop="@+id/chk_selection1"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <CheckBox
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="2 minute"
+        android:id="@+id/chk_selection3"
+        android:checked="false"
+        android:layout_below="@+id/chk_selection1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="5 minute"
+        android:id="@+id/chk_selection4"
+        android:checked="false"
+        android:layout_below="@+id/chk_selection2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+
+    <CheckBox
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Custom"
+        android:id="@+id/chk_selection5"
+        android:layout_below="@+id/chk_selection3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:checked="false" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="START CHALLENGE"
+        android:id="@+id/btn_startCHALLENGE"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Allow nearby devices to participate"
+        android:id="@+id/chk_enableHotspot"
+        android:layout_above="@+id/btn_startCHALLENGE"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:checked="false" />
 </RelativeLayout>
