--- a/MyChallenge/app/src/main/res/layout/grid_avatar.xml
+++ b/MyChallenge/app/src/main/res/layout/grid_avatar.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    >
     <RelativeLayout
         android:layout_width="100dp"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        android:background="@color/green"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/border">
+
+    <RelativeLayout
+        android:layout_width="92dp"
+        android:layout_height="92dp"
+        android:background="@color/colorAccent"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -45,5 +55,5 @@
             android:layout_alignRight="@+id/txt_pushUpTimeTaken"
             android:layout_alignEnd="@+id/txt_pushUpTimeTaken" />
     </RelativeLayout>
-
+    </RelativeLayout>
 </LinearLayout>
