--- a/MyChallenge/app/src/main/res/layout/activity_winner.xml
+++ b/MyChallenge/app/src/main/res/layout/activity_winner.xml
@@ -18,4 +18,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:textSize="50dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/txt_firstData"
+        android:layout_below="@+id/textView12"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
