--- a/MyChallenge/app/src/main/res/layout/activity_create_challenge_pop_up.xml
+++ b/MyChallenge/app/src/main/res/layout/activity_create_challenge_pop_up.xml
@@ -70,6 +70,7 @@
     <EditText
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:maxLength="10"
         android:id="@+id/edit_challengeNAME"
         android:singleLine="true"
         android:layout_alignBaseline="@+id/textView9"
