--- a/MyChallenge/app/src/main/res/layout/fragment_challenge_page_client.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_challenge_page_client.xml
@@ -20,6 +20,16 @@
             android:id="@+id/gv_client"
             android:layout_centerHorizontal="true"
             android:numColumns="2"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TAKE CHALLENGE"
+            android:id="@+id/btn_take_challenge"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/gv_client"
+            android:layout_alignEnd="@+id/gv_client" />
+
     </RelativeLayout>
     <TextView
         android:layout_width="wrap_content"
