--- a/MyChallenge/app/src/main/res/layout/customlistviewexcersises.xml
+++ b/MyChallenge/app/src/main/res/layout/customlistviewexcersises.xml
@@ -1,53 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linear"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:weightSum="2">
-
-
-        <ImageView
-            android:id="@+id/img"
+        <LinearLayout
+            android:id="@+id/linear"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_alignParentTop="true"
-            android:src="@mipmap/pushup" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/lin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_below="@+id/linear">
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
 
-        <TextView
-            android:id="@+id/tv_name"
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_alignParentTop="true"
+                android:src="@mipmap/pushup" />
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:text="Medium Text"
+                android:background="#ff3300"
+                android:textColor="#000000"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ln"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:background="#ff3300"
-            android:text="Medium Text"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#333333"
-            android:textSize="20dp" />
+            android:layout_height="match_parent"
+            android:layout_below="@+id/linear"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:background="#2b2c2c"
+                android:gravity="center|left">
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tv_next"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="NEXT Count"
+                        android:textSize="5dp"
+                        android:textColor="#ff3300"/>
 
+                    <TextView
+                        android:id="@+id/tv_nextbest"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#ff3300"
+                        android:layout_below="@+id/tv_next"
+                        android:text="86"/>
+                </RelativeLayout>
+            </LinearLayout>
 
-</RelativeLayout>
+            <LinearLayout
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:background="#333333"
+                android:gravity="center|left">
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tv_best"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="BEST Time"
+                        android:textSize="5dp"
+                        android:textColor="#ff3300"/>
+                    <TextView
+                        android:id="@+id/tv_besttime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1.23 sec"
+                        android:layout_below="@+id/tv_best"
+                        android:textColor="#ff3300"/>
+                </RelativeLayout>
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:background="#2b2c2c"
+                android:gravity="center|left">
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tv_top"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Best Count"
+                        android:textSize="5dp"
+                        android:textColor="#ff3300"/>
+                    <TextView
+                        android:id="@+id/tv_topbest"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="76"
+                        android:layout_below="@+id/tv_top"
+                        android:textColor="#ff3300"/>
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
+</FrameLayout>
 
