--- a/MyChallenge/app/src/main/res/layout/customlistviewexcersises.xml
+++ b/MyChallenge/app/src/main/res/layout/customlistviewexcersises.xml
@@ -6,19 +6,33 @@
 
     <RelativeLayout
         android:layout_width="150dp"
-        android:layout_height="165dp"
+        android:layout_height="160dp"
         android:background="#333333"
         android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/percentageProgress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/percentComplete"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="0%"
+                android:textAlignment="textEnd"
+                android:textColor="@android:color/white" />
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="19dp">
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
 
 
             <ImageView
@@ -84,6 +98,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/pushUpProgress"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
                 android:background="#333333"
@@ -107,14 +122,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
                         android:layout_alignParentLeft="true"
+                        android:layout_alignParentRight="true"
                         android:layout_alignParentStart="true"
                         android:text="1.23"
                         android:textAlignment="center"
                         android:textColor="#ffa500"
-                        android:textSize="18sp"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true" />
+                        android:textSize="18sp" />
                 </RelativeLayout>
 
             </LinearLayout>
@@ -154,6 +169,8 @@
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
+
+
     </RelativeLayout>
 </FrameLayout>
 
