--- a/MyChallenge/app/src/main/res/layout/activity_take_challenge.xml
+++ b/MyChallenge/app/src/main/res/layout/activity_take_challenge.xml
@@ -43,4 +43,13 @@
         android:layout_marginTop="29dp" />
             </RelativeLayout>
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/txt_takechallenge_heading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/frame"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="27dp"
+        android:text="TextView" />
 </RelativeLayout>
